Need more Perm Gen space... multiple fixes
add MAXPERM, to set -XX:MaxPermSize java option
add -XX:+CMSClassUnloadingEnabled option to hopefully trim down Perm Gen

Unrelated:

remove dead code/comments
move GC logs to /var/log/etherpad
make GC logs be hostname and time-dependent, so we don't overwrite them